--- a/src/index.css
+++ b/src/index.css
@@ -63,57 +63,62 @@
   background: rgb(143, 190, 245);
 }
 
+
 /* for our slide show */
+@keyframes slide-in-from-right {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-out-to-left {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes slide-in-from-left {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes slide-out-to-right {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
 .slide-in-from-right {
-  animation: slideInFromRight 0.5s ease-in;
+  animation: slide-in-from-right 0.5s ease-in;
 }
 
 .slide-out-to-left {
-  animation: slideOutToLeft 0.5s ease-in;
+  animation: slide-out-to-left 0.5s ease-in;
 }
 
 .slide-in-from-left {
-  animation: slideInFromLeft 0.5s ease-in;
+  animation: slide-in-from-left 0.5s ease-in;
 }
 
 .slide-out-to-right {
-  animation: slideOutToRight 0.5s ease-in;
+  animation: slide-out-to-right 0.5s ease-in;
 }
 
-@keyframes slideInFromRight {
-  from {
-    transform: translateX(100%);
-  }
-  to {
-    transform: translateX(0%);
-  }
-}
-
-@keyframes slideOutToLeft {
-  from {
-    transform: translateX(0%);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-@keyframes slideInFromLeft {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(0%);
-  }
-}
-
-@keyframes slideOutToRight {
-  from {
-    transform: translateX(0%);
-  }
-  to {
-    transform: translateX(100%);
-  }
+.hidden {
+  visibility: hidden;
 }
 
 @tailwind base;
