--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@
   appearance: none;
 }
 
-
-
 .bounce-custom {
   animation: bounce-custom 0.5s;
 }
@@ -63,7 +61,6 @@
   background: rgb(143, 190, 245);
 }
 
-
 /* for our slide show */
 @keyframes slide-in-from-right {
   from {
@@ -119,6 +116,17 @@
 
 .hidden {
   visibility: hidden;
+}
+
+.slick-slide > div {
+  margin: 0 10px;
+}
+
+.custom-gradient {
+  background: linear-gradient(to top, var(--tw-gradient-stops)),
+    linear-gradient(to right, var(--tw-gradient-stops));
+  --tw-gradient-stops: var(--tw-gradient-from),
+    var(--tw-gradient-to, rgba(255, 255, 255, 0));
 }
 
 @tailwind base;
